<resources>
    <string name="app_name">Next Meal</string>
    <string name="logo">Logo Coming soon</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="show_hide_password_content">Show/Hide Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_text">No account yet? Register <u>here</u></string>
    <string name="fingerprint_description">Login with fingerprint</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="use_password">Use Password</string>
    <string name="choose_an_username">Choose Username</string>
    <string name="repeat_password_text">Repeat Password</string>
    <string name="register_button_text">Register</string>
    <string name="back_to_login_text">Already have an account? Log in <u>here</u></string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_generator_home">GeneratorHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="common_drawer_item_recipe">Recipe</string>
    <string name="common_drawer_item_history">History</string>
    <string name="common_drawer_item_calculator">Calculator</string>
    <string name="common_drawer_item_poll">Poll</string>
    <string name="common_drawer_item_profile">Profile</string>
    <string name="manifest_activity_calculator">Calculator</string>
    <string name="manifest_activity_history">History</string>
    <string name="manifest_activity_poll">Poll</string>
    <string name="manifest_activity_profile">Profile</string>
    <string name="manifest_activity_recipe">Recipe</string>
    <string name="common_header_user_full_name">Android Studio</string>
    <string name="common_header_user_email_address">android.studio@android.com</string>
    <string name="back_to_generator">Back To Generator</string>
    <string name="selected_calculator"><b>SELECTED</b></string>
    <string name="users_poll_underline"><u>Users in poll</u>:</string>
    <string name="set_recipe_name"><b>Set Recipe Name</b></string>
</resources>
