<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="387dp"
        android:layout_height="247dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />
    <EditText
            android:id="@+id/username_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/username"
            android:background="#11000000"
            android:drawableStart="@drawable/ic_action_username"
            android:drawablePadding="10dp"
            android:textSize="24sp"
            android:textAlignment="viewStart"
            android:layout_centerInParent="true"/>

    <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">
        <EditText
                android:id="@+id/password_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:background="#11000000"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_action_password"
                android:drawablePadding="10dp"
                android:textSize="24sp" android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="287dp"
                android:textAlignment="viewStart"/>

        <ImageButton
                android:id="@+id/show_hide_password"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_action_show_password"
                android:background="@null"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="64dp"
                android:layout_alignTop="@+id/password_field"
                android:contentDescription="@string/show_hide_password_content"/>
        <ImageButton
                android:id="@+id/fingerprint_login"
                android:background="@null"
                android:layout_width="55dp"
                android:layout_height="57dp"
                app:srcCompat="@drawable/ic_action_fingerprint_login"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="196dp" android:contentDescription="@string/fingerprint_description"/>
    </RelativeLayout>

    <android.support.v7.widget.CardView
            android:id="@+id/login_button_card_view"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            app:cardBackgroundColor="@color/colorAccent"
            android:layout_width="300dp" android:layout_centerHorizontal="true" android:layout_marginBottom="116dp"
            app:cardCornerRadius="25dp" app:cardElevation="10dp">

        <RelativeLayout
                android:id="@+id/login_button_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            <TextView
                    android:text="@string/login_button_text"
                    android:textColor="#fff"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/login_text" android:textSize="18sp"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
            android:id="@+id/register_text"
            android:text="@string/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="44dp"/>
</RelativeLayout>