<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".register.RegisterActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="350dp"
        android:layout_height="240dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <EditText
        android:id="@+id/register_username_field"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_username"
        android:drawablePadding="10dp"
        android:paddingLeft="2dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image" />

    <TextView android:id="@+id/username_availability"
              android:text="negative"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:visibility="gone"/>

    <ImageView
        android:id="@+id/username_availability_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/register_username_field"
        app:layout_constraintEnd_toEndOf="@+id/register_username_field"
        app:layout_constraintTop_toTopOf="@+id/register_username_field" />

    <EditText
        android:id="@+id/register_email_field"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="#11000000"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:paddingLeft="5dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username_field" />

    <EditText
        android:id="@+id/register_password_field"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_password"
        android:drawablePadding="10dp"
        android:paddingLeft="2dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_field" />

    <ImageButton
        android:id="@+id/register_show_hide_password"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/register_password_field"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:contentDescription="@string/show_hide_password_content"
        app:layout_constraintBottom_toBottomOf="@+id/register_password_field"
        app:layout_constraintEnd_toEndOf="@+id/register_password_field"
        app:layout_constraintTop_toTopOf="@+id/register_password_field"
        app:srcCompat="@drawable/ic_action_show_password" />

    <EditText
        android:id="@+id/register_repeat_password_field"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_password"
        android:drawablePadding="10dp"
        android:paddingLeft="2dp"
        android:ems="10"
        android:hint="@string/repeat_password_text"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_field" />

    <ImageButton
        android:id="@+id/register_show_hide_repeat_password_image"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/register_repeat_password_field"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:contentDescription="@string/show_hide_password_content"
        app:layout_constraintBottom_toBottomOf="@+id/register_repeat_password_field"
        app:layout_constraintEnd_toEndOf="@+id/register_repeat_password_field"
        app:layout_constraintTop_toTopOf="@+id/register_repeat_password_field"
        app:srcCompat="@drawable/ic_action_show_password" />

    <android.support.v7.widget.CardView
        android:id="@+id/register_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_repeat_password_field">

        <TextView
            android:id="@+id/register_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/register_button_text"
            android:textColor="#fff"
            android:textSize="18sp" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/back_to_login_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

</android.support.constraint.ConstraintLayout>